--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
+  width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	align-content: center;
 }
 
 .logo {
