--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a:hover {
 body {
   display: flex;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 200vh;
 }
 
 
@@ -205,6 +205,26 @@ h1 {
   translate: -50% -50%;
   z-index: 3;
 }
+
+.bottomMenu {
+  position: fixed;
+  bottom: 0;
+  color: white;
+  width: 100%;
+  height: 100%px;
+  border-top: 1px solid #000;
+  background: red;
+  z-index: 1;
+  transition: all .5s;
+}
+
+.hide{
+   opacity: 0;
+}
+.show{
+  opacity: 1;
+}
+
 
 /* -- Links -- */
 
