--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  background-color: rgba(242, 240, 235);
+  background-color: rgba(41,41,41);
 
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -27,7 +27,7 @@ a:hover {
 body {
   display: flex;
   min-width: 320px;
-  min-height: 200vh;
+  min-height: 120vh;
 }
 
 
@@ -169,26 +169,28 @@ button:focus-visible {
 
 #blob {
 
-  height: 60vh;
+  height: 50vh;
   aspect-ratio: 1;
   position: absolute;
   left: 50%;
   top: 50%;
   
-  border-radius: 50%;
+  
+  border-radius: 100%;
   background: linear-gradient(rgba(149, 21, 40, 0.4) 10%, rgba(236,151,58,0.8));
   animation: rotate 20s infinite;
   opacity: 0.8;
   overflow: hidden;
-  overflow-x: hidden;
-  overflow-y: hidden;
+
   
 }
 
 #blur {
-  height: 100%;
+  height: 250%;
   width: 100%;
   position: absolute;
+  overflow: hidden;
+  padding: 5;
 
 }
 
@@ -208,23 +210,39 @@ h1 {
 }
 
 .bottomMenu {
-  position: fixed;
-  bottom: 0;
   color: white;
   width: 100%;
-  height: 100%px;
-  border-top: 1px solid #000;
-  background: red;
+  height: 300vh;
+  background: rgb(41, 41, 41);
   z-index: 1;
-  transition: all .5s;
+  transition: all .5s ease-in-out;
+  overflow: visible;
 }
 
 .hide{
    opacity: 0;
+  
 }
 .show{
   opacity: 1;
 }
+
+.blowShow {
+  opacity: 1;
+  visibility: visible;
+  transition: visibility 0.3s ease-in-out; /* Add transition for visibility */
+}
+
+.blobHide {
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.3s ease-in-out; /* Add transition for visibility */
+  display: none;
+
+
+}
+
+
 
 
 /* -- Links -- */
